--- a/exo33/src/main/resources/application.yml
+++ b/exo33/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     hibernate:
       ddl-auto: create
   datasource:
-    url: jdbc:h2:file:./data/testdb
+    url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
     password: password
